update readme file